--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,20 @@ android {
 
 dependencies {
     provided 'com.google.android.things:androidthings:0.4.1-devpreview'
+
+    // GPIO Button Driver.
     compile 'com.google.android.things.contrib:driver-button:0.3'
+
+    // Accelerometer
+    compile 'com.google.android.things.contrib:driver-mma7660fc:0.2'
+
+    // GPS
+    compile 'com.google.android.things.contrib:driver-gps:0.3'
+
+    // Temp & Pressure Sensor.
+    compile 'com.google.android.things.contrib:driver-bmx280:0.3'
+
+    // RxJava
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
