--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
+        // Downloader
         classpath 'de.undercouch:gradle-download-task:3.1.2'
-
+        // Firebase
+        classpath 'com.google.gms:google-services:3.1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -30,7 +32,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
+
 }
 
 task clean(type: Delete) {
